# qwen-skyst-hackathon

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: leakage_mock.json
barrierx/: client.py  constants.py  context.py  intercept.py  utils.py  wallet_utils.py
barrierx_server/: data_leakage_detector.py  main.py  prompt_injection_detector.py
client/: barrierx_action_provider.py  chatbot.py  chatbot_gui.py  debug_utils.py  setup.py  tools.py
client/barrierx/: client.py  constants.py  context.py  intercept.py  utils.py  wallet_utils.py
phishing_server/: README.md  main.py
server/: data_leakage_checker.py  main.py  prompt_injection_checker.py
